# model-loading-demo

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake
include/loading/: camera.hpp  loading.hpp
models/Audi R8/: Audi R8.blend  Audi R8.mtl
models/backpack/: backpack.mtl
samples/: audi.cpp  backpack.cpp  nanosuit.cpp
src/: loading.cpp
